--- a/keywords_extraction.ipynb
+++ b/keywords_extraction.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,32 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = \"\"\"\n",
-    "         Supervised learning is the machine learning task of \n",
-    "         learning a function that maps an input to an output based \n",
-    "         on example input-output pairs.[1] It infers a function \n",
-    "         from labeled training data consisting of a set of \n",
-    "         training examples.[2] In supervised learning, each \n",
-    "         example is a pair consisting of an input object \n",
-    "         (typically a vector) and a desired output value (also \n",
-    "         called the supervisory signal). A supervised learning \n",
-    "         algorithm analyzes the training data and produces an \n",
-    "         inferred function, which can be used for mapping new \n",
-    "         examples. An optimal scenario will allow for the algorithm \n",
-    "         to correctly determine the class labels for unseen \n",
-    "         instances. This requires the learning algorithm to  \n",
-    "         generalize from the training data to unseen situations \n",
-    "         in a 'reasonable' way (see inductive bias).\n",
-    "      \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,11 +103,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_gram_range = (2, 2)\n",
+    "doc ='''In this paper we propose a novel self-supervised\n",
+    "approach of keywords and keyphrases retrieval and extraction\n",
+    "by an end-to-end deep learning approach, which is trained by\n",
+    "contextually self-labelled corpus. Our proposed approach is\n",
+    "novel to use contextual and semantic features to extract the\n",
+    "keywords and has outperformed the state of the art. Through\n",
+    "the experiment the proposed approach has been proved to be\n",
+    "better in both semantic meaning and quality than the existing\n",
+    "popular algorithms of keyword extraction. In addition, we\n",
+    "propose to use contextual features from bidirectional\n",
+    "transformers to automatically label short-sentence corpus with\n",
+    "keywords and keyphrases to build the ground truth. This\n",
+    "process avoids the human time to label the keywords and do not\n",
+    "need any prior knowledge. To the best of our knowledge, our\n",
+    "published dataset in this paper is a fine domain-independent\n",
+    "corpus of short sentences with labelled keywords and\n",
+    "keyphrases in the NLP community.\n",
+    "\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_gram_range = (1, 3)\n",
     "stop_words = \"english\"\n",
     "\n",
     "# Extract candidate words/phrases\n",
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['algorithm analyzes', 'supervised learning', 'machine learning', 'learning machine', 'learning algorithm']\n"
+      "['propose novel self', 'we propose novel', 'keyword extraction', 'algorithms of keyword', 'of keyword extraction']\n"
      ]
     }
    ],
@@ -181,22 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['training examples',\n",
-       " 'training data',\n",
-       " 'algorithm generalize',\n",
-       " 'supervised learning',\n",
-       " 'machine learning']"
+       "['popular algorithms of',\n",
+       " 'keyphrases retrieval',\n",
+       " 'propose novel',\n",
+       " 'existing popular algorithms',\n",
+       " 'we propose novel']"
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 124
     }
    ],
    "source": [
@@ -205,22 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['learning algorithm',\n",
-       " 'training data',\n",
-       " 'supervised learning',\n",
-       " 'machine learning',\n",
-       " 'algorithm generalize']"
+       "['of keyword extraction',\n",
+       " 'existing popular algorithms',\n",
+       " 'we propose novel',\n",
+       " 'outperformed the state',\n",
+       " 'deep learning approach']"
       ]
      },
      "metadata": {},
-     "execution_count": 62
+     "execution_count": 125
     }
    ],
    "source": [
@@ -229,10 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "notes = '''\n",
+    "- L'algo récupère les mots-clés avec plus ou moins de succès en fonction du document, du nombre de keywords qu'on cherche (1-3), du paramètre indicant la diversité dans les algos mmr et max_sum_min, et de si les stop-words sont gardés ou pas.\n",
+    "- Les paramètres nr_candidates = 13 et diversity = 0.4 respectivement pour max_sum_min et mmr sont un bon compromis pour equilibrer entre la variété des mots-clés et leur pertinence.\n",
+    "- En général les mots-clés que BERT extrait ne correspondent pas toujours aux mots les plus pertinents decrivant le mieux le document, mais sont souvent aussi des mots-clés qui pourraient demander une definition ou une explication si le lecteur n'es pas familiarisé avec le domaine sur lequel traite le document\n",
+    "\n",
+    "'''"
+   ]
   }
  ]
 }
