todo et petits changements

--- a/keywords_extraction.ipynb
+++ b/keywords_extraction.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,18 +145,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 207,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "228\n"
+     ]
+    }
+   ],
    "source": [
-    "model = SentenceTransformer('distilbert-base-nli-mean-tokens')\n",
-    "doc_embedding = model.encode([doc])\n",
-    "candidate_embeddings = model.encode(candidates)"
+    "print(len(candidates))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model = SentenceTransformer('paraphrase-distilroberta-base-v1')\n",
+    "model = SentenceTransformer('allenai-specter')\n",
+    "doc_embedding = model.encode([doc])\n",
+    "candidate_embeddings = model.encode(candidates, convert_to_numpy = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "228\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(candidate_embeddings))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[-0.4871616   0.69508785 -0.36690888 ...  0.33781248 -0.00681381\n   0.8250342 ]\n [-0.89259356  1.0981958  -0.5234789  ...  0.22107156 -0.28508848\n   0.70738477]\n [-0.8816643   1.1096817  -0.69861734 ...  0.19475426 -0.4126589\n   0.5657778 ]\n ...\n [-0.21211702  0.73010737 -0.38308388 ...  0.54895633  0.08995987\n   0.48837164]\n [-0.08637851  0.69591856 -0.6334842  ...  0.46939543  0.31716707\n   0.612816  ]\n [-0.20675752  0.7482382  -0.55467534 ...  0.6417859   0.18726674\n   0.5392571 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(candidate_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['propose novel self', 'we propose novel', 'keyword extraction', 'algorithms of keyword', 'of keyword extraction']\n"
+      "['label keywords need', 'keyphrases retrieval extraction', 'keyphrases nlp', 'extract keywords outperformed', 'keywords keyphrases nlp']\n"
      ]
     }
    ],
@@ -184,22 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['popular algorithms of',\n",
-       " 'keyphrases retrieval',\n",
-       " 'propose novel',\n",
-       " 'existing popular algorithms',\n",
-       " 'we propose novel']"
+       "['label short sentence',\n",
+       " 'retrieval extraction end',\n",
+       " 'label keywords need',\n",
+       " 'keyphrases nlp',\n",
+       " 'extract keywords outperformed']"
       ]
      },
      "metadata": {},
-     "execution_count": 124
+     "execution_count": 179
     }
    ],
    "source": [
@@ -208,22 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['of keyword extraction',\n",
-       " 'existing popular algorithms',\n",
-       " 'we propose novel',\n",
-       " 'outperformed the state',\n",
-       " 'deep learning approach']"
+       "['keywords keyphrases nlp',\n",
+       " 'deep learning approach',\n",
+       " 'label short sentence',\n",
+       " 'retrieval extraction end',\n",
+       " 'extract keywords outperformed']"
       ]
      },
      "metadata": {},
-     "execution_count": 125
+     "execution_count": 172
     }
    ],
    "source": [
@@ -232,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +294,19 @@
     "- L'algo récupère les mots-clés avec plus ou moins de succès en fonction du document, du nombre de keywords qu'on cherche (1-3), du paramètre indicant la diversité dans les algos mmr et max_sum_min, et de si les stop-words sont gardés ou pas.\n",
     "- Les paramètres nr_candidates = 13 et diversity = 0.4 respectivement pour max_sum_min et mmr sont un bon compromis pour equilibrer entre la variété des mots-clés et leur pertinence.\n",
     "- En général les mots-clés que BERT extrait ne correspondent pas toujours aux mots les plus pertinents decrivant le mieux le document, mais sont souvent aussi des mots-clés qui pourraient demander une definition ou une explication si le lecteur n'es pas familiarisé avec le domaine sur lequel traite le document\n",
-    "\n",
+    "-'paraphrase-distilroberta-base-v1' and 'allenai-specter' have yielded better results with our documents than the distilbert model used in the tutorial (further tests should be made) \n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TODO = '''\n",
+    "- Maybe use cross-encoders instead of bi-encoders\n",
+    "- TF-IDF\n",
     "'''"
    ]
   }
